name:                   command-line-tools
version:                0.1.0.0
synopsis:               Various command line tools.
-- description:
homepage:               https://github.com/trskop/command-line-tools
bug-reports:            https://github.com/trskop/command-line-tools/issues
license:                BSD3
license-file:           LICENSE
author:                 Peter Trsko
maintainer:             dogmat@gmail.com
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2011 - 2013 Peter Trško
category:               Tools
build-type:             Simple
cabal-version:          >=1.2

extra-source-files:
    README.md

flag pedantic
  description:
    Pass additional warning flags including -Werror to GHC during compilation.
  default: False

executable sgrax
  hs-source-dirs:       src
  main-is:              sgrax.hs
  build-depends:        base < 5

  ghc-options:          -Wall
  if impl(ghc >= 6.8)
    ghc-options:        -fwarn-tabs
  if flag(pedantic)
    ghc-options:        -Werror

executable flip
  hs-source-dirs:       src
  main-is:              flip.hs
  build-depends:        base < 5, unix == 2.*

  ghc-options:          -Wall
  if impl(ghc >= 6.8)
    ghc-options:        -fwarn-tabs
  if flag(pedantic)
    ghc-options:        -Werror
